--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <!-- header01 end-->
     <!-- layout06-->
     <section data-menu="true" class="layout_06">
-      <div data-title="我的GALAXY A8時尚生活體驗" data-tags="[&quot;熱浪來襲&quot;, &quot;hithot&quot;]" data-filter="[56247, 56274, 56375]" class="layoutWrap"></div>
+      <div data-title="我的GALAXY A8 2016時尚生活體驗" data-tags="[&quot;熱浪來襲&quot;, &quot;hithot&quot;]" data-filter="[56247, 56274, 56375]" class="layoutWrap"></div>
     </section>
     <!-- layout06 end-->
     <!-- layout05-->
@@ -168,7 +168,7 @@
         <div class="txtWrap">
           <div class="txt">
             <ul class="list">
-              <li class="fadeOut"> <span class="item">活動時間：</span><span class="itemTxt">2016/10/27 ~ 2016/11/10</span></li>
+              <li class="fadeOut"> <span class="item">活動時間：</span><span class="itemTxt">2016/10/27～2016/11/10</span></li>
               <li class="fadeOut"> <span class="item">參加對象：</span><span class="itemTxt">不限年齡、不限性別，只要喜愛用手機紀錄生活，並樂於在自    己的社群上分享照片、文字。</span></li>
               <li class="fadeOut"> <span class="item">活動獎項：</span><span class="itemTxt">共4名，SAMSUNG Galaxy A8 2016 乙支（價值15900元）  +8000元一名、5000元一名、3000元兩名。</span></li>
             </ul>
