--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <!-- header01 end-->
     <!-- layout06-->
     <section data-menu="true" class="layout_06">
-      <div data-title="我的GALAXY A8 2016時尚生活體驗" data-tags="[&quot;熱浪來襲&quot;, &quot;hithot&quot;]" data-filter="[56247, 56274, 56375]" class="layoutWrap"></div>
+      <div data-title="我的GALAXY A8 2016 獨到品味體驗" data-tags="[&quot;熱浪來襲&quot;, &quot;hithot&quot;]" data-filter="[56247, 56274, 56375]" class="layoutWrap"></div>
     </section>
     <!-- layout06 end-->
     <!-- layout05-->
