--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- SEO-->
-    <title>特企整理頁面 - JUKSY 流行生活網</title>
+    <title>分享屬於你的[城市時尚]─你的城市‧由你演繹 - JUKSY 流行生活網</title>
     <meta name="keywords" content="流行,潮流,街頭,生活,娛樂,時尚,精品,穿搭,影音,音樂,電影,設計,藝術,3C,超跑,正妹">
-    <meta name="description" content="瘋迷無國界、今夏最火的話題《Pokemon GO》，自上線以來熱議不斷，並再度引爆「神奇寶貝」初代狂潮！想跟風卻摸不著頭緒？JUKSY 為你開啟「寶可夢速成修練之路」！">
+    <meta name="description" content="甚麼是時尚？甚麼是潮流？沒人能定義，我的風格我自己演繹，無須配飾，手中的 Samsung Galaxy A8 就夠我炫，雙擊Home鍵開啟相機記錄生活，炫自己精彩！現在，跟我分享你的態度，贏取手機或萬元獎金。">
     <!-- SEO end-->
     <!-- FB-->
     <meta property="fb:app_id" content="608477045879026">
-    <meta property="og:title" content="成神之路有你有我！寶可夢全攻略">
-    <meta property="og:description" content="瘋迷無國界、今夏最火的話題《Pokemon GO》，自上線以來熱議不斷，並再度引爆「神奇寶貝」初代狂潮！想跟風卻摸不著頭緒？JUKSY 為你開啟「寶可夢速成修練之路」！">
+    <meta property="og:title" content="分享屬於你的[城市時尚]─你的城市‧由你演繹">
+    <meta property="og:description" content="甚麼是時尚？甚麼是潮流？沒人能定義，我的風格我自己演繹，無須配飾，手中的 Samsung Galaxy A8 就夠我炫，雙擊Home鍵開啟相機記錄生活，炫自己精彩！現在，跟我分享你的態度，贏取手機或萬元獎金。">
     <meta property="og:image" content="img/fb.png">
-    <meta property="og:url" content="https://www.juksy.com/events/pokemon2016go">
+    <meta property="og:url" content="https://www.juksy.com/events/201611fashioncity">
     <meta property="og:site_name" content="JUKSY 流行生活網">
     <meta property="og:type" content="website">
     <!-- FB end-->
@@ -38,7 +38,7 @@
   </head>
   <body>
     <div id="fb-root"></div>
-    <h1 class="hide">夏日穿搭特輯 - JUKSY 流行生活網</h1>
+    <h1 class="hide">分享屬於你的[城市時尚]─你的城市‧由你演繹 - JUKSY 流行生活網</h1>
     <!-- nav-->
     <nav class="nav_01">
       <div class="navWrapBg"></div>
@@ -126,7 +126,7 @@
                 </div>
                 <div data-dotdotdot="true" class="txt">甚麼是時尚潮流？沒人能定義，我的風格我自己演繹，無需配飾，手中的 SAMSUNG Galaxy A8 2016就夠我炫，雙擊 Home 鍵開啟相機紀錄生活，炫自己精彩！現在，跟我分享你的態度，贏取手機或萬元獎金。</div>
               </div>
-            </div><a href="https://www.juksy.com/archives/53887" target="_blank" class="link">
+            </div><a href="https://www.facebook.com/events/620224604823793/" target="_blank" class="link">
               <div class="linkWrap"><span class="ch">馬上參加</span><span class="ch arrow">→</span></div></a>
           </div>
         </div>
@@ -135,7 +135,7 @@
     <!-- header01 end-->
     <!-- layout06-->
     <section data-menu="true" class="layout_06">
-      <div data-title="我的GALAXY A8 2016 獨到品味體驗" data-tags="[&quot;熱浪來襲&quot;, &quot;hithot&quot;]" data-filter="[56247, 56274, 56375]" class="layoutWrap"></div>
+      <div data-title="我的Galaxy A8 2016 獨到品味體驗" data-tags="[&quot;hithot&quot;,&quot;Samsung素人體驗&quot;]" data-filter="[58605, 58667]" class="layoutWrap"></div>
     </section>
     <!-- layout06 end-->
     <!-- layout05-->
@@ -144,19 +144,19 @@
         <div class="title">SELECTED ARTICLES</div>
         <h2 class="detail">時尚職人眼光，看城市</h2>
         <ul class="article">
-          <li class="fadeOut"><a href="https://www.juksy.com/archives/54297" target="_blank" data-imgload="https://static.juksy.com/static/600x600/files/articles/58493/cover/58043bfa2972a.png" class="img imgLoading">
+          <li class="fadeOut"><a href="https://www.juksy.com/archives/58605" target="_blank" data-imgload="https://static.juksy.com/static/600x600/files/articles/58605/cover/580d82480b92a.png" class="img imgLoading">
               <div class="linkWrap">
                 <div class="linkBorder"><span class="ch">馬上閱讀</span><span class="ch arrow">→</span></div>
               </div></a>
-            <div class="txtWrap"><a data-dotdotdot="true" href="https://www.juksy.com/archives/54297" target="_blank" class="txt">
-                <h3>春夏就是「涼鞋」的季節！防爆汗必備，清涼有型3穿搭Look大放送！</h3></a></div>
+            <div class="txtWrap"><a data-dotdotdot="true" href="https://www.juksy.com/archives/58605" target="_blank" class="txt">
+                <h3>跟著時尚MODEL看城市！彭千祐的午後私旅行</h3></a></div>
           </li>
-          <li class="fadeOut"><a href="https://www.juksy.com/archives/54297" target="_blank" data-imgload="https://static.juksy.com/static/600x600/files/articles/58515/cover/58049b7060bdf.png" class="img imgLoading">
+          <li class="fadeOut"><a href="https://www.juksy.com/archives/58667" target="_blank" data-imgload="https://static.juksy.com/static/600x600/files/articles/58667/cover/580d8743bf3e5.png" class="img imgLoading">
               <div class="linkWrap">
                 <div class="linkBorder"><span class="ch">馬上閱讀</span><span class="ch arrow">→</span></div>
               </div></a>
-            <div class="txtWrap"><a data-dotdotdot="true" href="https://www.juksy.com/archives/54297" target="_blank" class="txt">
-                <h3>春夏就是「涼鞋」的季節！防爆汗必備，清涼有型3穿搭Look大放送！</h3></a></div>
+            <div class="txtWrap"><a data-dotdotdot="true" href="https://www.juksy.com/archives/58667" target="_blank" class="txt">
+                <h3>走逛台北潮去處！「個性派化妝師」古寧紫跟拍日記</h3></a></div>
           </li>
         </ul>
       </div>
@@ -170,11 +170,11 @@
             <ul class="list">
               <li class="fadeOut"> <span class="item">活動時間：</span><span class="itemTxt">2016/10/27～2016/11/10</span></li>
               <li class="fadeOut"> <span class="item">參加對象：</span><span class="itemTxt">不限年齡、不限性別，只要喜愛用手機紀錄生活，並樂於在自    己的社群上分享照片、文字。</span></li>
-              <li class="fadeOut"> <span class="item">活動獎項：</span><span class="itemTxt">共4名，SAMSUNG Galaxy A8 2016 乙支（價值15900元）  +8000元一名、5000元一名、3000元兩名。</span></li>
+              <li class="fadeOut"> <span class="item">活動獎項：</span><span class="itemTxt">共4名，SAMSUNG Galaxy A8 2016 乙支（價值15900元）  +8000元一名、5000元一名、3000元兩名。<br>（手機顏色不可挑選，隨機出貨） </span></li>
             </ul>
             <p>你是這樣的人嗎？不吝於炫自己的生活，樂於分享自己的時尚態度。來！這就跟我們一起來炫自己的流行也炫自己熱愛的城市裡最潮、最時尚的地點，分享心情感言、展現自信跟態度。來爭奪 "萬元獎金" 與SAMSUNG Galaxy A8 2016時尚手機。</p><br>
           </div>
-          <div class="btnWrap"><a href="https://www.facebook.com/juksymag" target="_blank" class="btn">
+          <div class="btnWrap"><a href="https://www.facebook.com/events/620224604823793/" target="_blank" class="btn">
               <div class="icon">
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 89.4 37.4" style="enable-background:new 0 0 89.4 37.4;" xml:space="preserve">
                   <g>
@@ -207,7 +207,7 @@
     <!-- gallery02 end-->
     <!-- layout03_infinite-->
     <section id="layout_03_infinit" data-menu="true" class="layout_03">
-      <div data-tags="[&quot;熱浪來襲&quot;, &quot;hithot&quot;]" data-filter="[56247, 56274, 56375]" class="layoutWrap">
+      <div data-tags="[&quot;我的城市時尚我自定義&quot;]" data-filter="[56247, 56274, 56375]" class="layoutWrap">
         <div class="title">RELATED POSTS</div>
         <h2 class="detail">島內最時尚的遊人，都這樣炫玩！</h2>
         <div class="subTitleWrap">
