設定正確標籤名稱

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <!-- header01 end-->
     <!-- layout06-->
     <section data-menu="true" class="layout_06">
-      <div data-title="我的Galaxy A8 2016 獨到品味體驗" data-tags="[&quot;hithot&quot;,&quot;Samsung素人體驗&quot;]" data-filter="[58605, 58667]" class="layoutWrap"></div>
+      <div data-title="我的Galaxy A8 2016 獨到品味體驗" data-tags="[&quot;Samsung素人體驗&quot;]" data-filter="[58605, 58667]" class="layoutWrap"></div>
     </section>
     <!-- layout06 end-->
     <!-- layout05-->
@@ -207,7 +207,7 @@
     <!-- gallery02 end-->
     <!-- layout03_infinite-->
     <section id="layout_03_infinit" data-menu="true" class="layout_03">
-      <div data-tags="[&quot;我的城市時尚我自定義&quot;]" data-filter="[56247, 56274, 56375]" class="layoutWrap">
+      <div data-tags="[&quot;我的城市時尚我自定義&quot;]" data-filter="[58605, 58667]" class="layoutWrap">
         <div class="title">RELATED POSTS</div>
         <h2 class="detail">島內最時尚的遊人，都這樣炫玩！</h2>
         <div class="subTitleWrap">
