--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     </g>
                   </svg>
                 </div>
-                <div data-dotdotdot="true" class="txt">甚麼是時尚潮流？沒人能定義，我的風格我自己演繹，無需配飾，手中的 SAMSUNG Galaxy A8 2016就夠我炫，雙擊 Home 鍵開啟相機紀錄生活，炫自己精彩！現在，跟我分享你的態度，贏取手機或萬元獎金。</div>
+                <div data-dotdotdot="true" class="txt">甚麼是時尚潮流？沒人能定義，我的風格我自己演繹，無需配飾，手中的 SAMSUNG Galaxy A8 2016就夠我炫，雙擊 Home 鍵開啟相機紀錄，炫自己精彩！現在，分享你的態度，贏取手機或萬元獎金。</div>
               </div>
             </div><a href="https://www.facebook.com/events/620224604823793/" target="_blank" class="link">
               <div class="linkWrap"><span class="ch">馬上參加</span><span class="ch arrow">→</span></div></a>
